--- a/homepage.html
+++ b/homepage.html
@@ -5,17 +5,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width; initial-scale=1;">
 	<link rel="stylesheet" href="css/all.css" type="text/css"/>
-	<link rel="stylesheet" href="sass/fonts.css" type="text/css"/>
+	<link rel="stylesheet" href="fonts/font-face.css" type="text/css"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/intlTelInput.css">
-	<script type="text/javascript" src="js/jquery-3.4.1.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.js"></script>
 
-	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="js/intlTelInput-jquery.min.js"></script>
-	<script src="js/intlTelInput.js"></script>
-	<script type="text/javascript" src="js/jquery.bxslider.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
 	<title>Yaroslav Vitko Healthcare Test</title>
 	<style>
 	  .proceed {
@@ -371,6 +364,13 @@
 			</div>
 		</footer>
 	</div>
+	<script type="text/javascript" src="js/jquery-3.4.1.js"></script>
+	<script type="text/javascript" src="js/jquery-ui.js"></script>
+	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="js/intlTelInput-jquery.min.js"></script>
+	<script src="js/intlTelInput.js"></script>
+	<script type="text/javascript" src="js/jquery.bxslider.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 	<script>
 	var input = document.querySelector("#phone");
 	intlTelInput(input, {
